recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:20: error: identifier expected but '}' found.
  }
  ^